# RDE1

./: .gitignore  Dockerfile  Makefile  README.md
client/: Cargo.toml
client/src/: args.rs  lib.rs  main.rs
client/src/methods/: dns.rs  https.rs  mod.rs
client/src/utils/: banner.rs  checker.rs  crypto.rs  files.rs  mod.rs
server/: Cargo.toml  cert.pem  key.pem
server/src/: args.rs  lib.rs  main.rs
server/src/methods/: dns.rs  https.rs  icmp.rs  mod.rs
server/src/utils/: crypto.rs  extract.rs  files.rs  mod.rs
yara/: crde_dns_or_https.yar
