[package]
authors = ["g0h4n <g0h4n_0@protonmail.com>"]
name = "crde"
description = "CRDE (Client Rusty Data Exfiltrator) is a tool allowing auditor to extract files from different protocol written in rust."
keywords = ["https", "pentest", "dns", "tokio", "async"]
repository = "https://github.com/g0h4n/RDE1"
homepage = "https://github.com/g0h4n/RDE1"
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "4.0"
log = "0.4"
env_logger = "0.10"
colored = "2"

trust-dns-resolver = "0.23"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
rand = "0.8.5"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
pbkdf2 = "0.11.0"
regex = "1.6.0"
indicatif = "0.17"

reqwest = { version = "0.11", features = ["blocking"] }
reqwest_cookie_store = "0.6.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"