[package]
authors = ["g0h4n <g0h4n_0@protonmail.com>"]
name = "srde"
description = "SRDE (Server Rusty Data Exfiltrator) is a tool allowing auditor to extract files from different protocol written in rust."
keywords = ["https", "pentest", "dns", "tokio", "async"]
repository = "https://github.com/g0h4n/RDE1"
homepage = "https://github.com/g0h4n/RDE1"
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "4.0"
log = "0.4"
env_logger = "0.10"
colored = "2"

hex = "0.4"
rand = "0.8.5"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
pbkdf2 = "0.11.0"
regex = "1.6.0"

anyhow = "1.0"
simple-dns = "0.5.5"

actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }

lazy_static = "1.4.0"
mutex = "0.1.0"

#pcap = "0.11"